--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "recharts": "^2.1.10",
     "swr": "^1.3.0"
   },
   "devDependencies": {
