--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client-to",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 10.30.5.4 -p 2300",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,12 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
+    "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
-    "recharts": "^2.1.10",
     "swr": "^1.3.0"
   },
   "devDependencies": {
