--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "chart.js": "^3.8.0",
+    "chartjs-plugin-zoom": "^1.2.1",
     "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
