--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-black==22.12.0
-click==8.1.3
-isort==5.11.4
-mypy-extensions==0.4.3
-numpy==1.24.1
-pandas==1.5.2
-pathspec==0.10.3
-platformdirs==2.6.2
+numpy==1.22.4
+pandas==1.4.2
 psycopg==3.1.7
 psycopg-binary==3.1.6
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2
-pytz==2022.7
+pytz==2022.1
 six==1.16.0
-tomli==2.0.1
+termcolor==1.1.0
 typing_extensions==4.4.0
+yaspin==2.1.0
