Enhance frontend components

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "badnights",
+        "chartjs",
         "crossorigin",
-        "datapoint"
+        "datapoint",
+        "ight",
+        "Lightcurves",
+        "urves"
     ]
 }
